# RobofocusAscomAplaca

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SESSION_STATE.md  build.py  config.example.json  installer.iss  pyproject.toml  release.py  requirements-dev.txt  requirements.txt  robofocus-driver-page-en.html  robofocus-driver-page-it.html  robofocus_alpaca.spec
.github/workflows/: build.yml
openspec/: project.md
openspec/changes/add-com-port-auto-discovery/: proposal.md  tasks.md
openspec/changes/add-robofocus-alpaca-driver/: design.md  proposal.md  tasks.md
robofocus_alpaca/: __init__.py  __main__.py
robofocus_alpaca/api/: app.py  discovery.py  error_mapper.py  gui_api.py  models.py  routes.py
robofocus_alpaca/config/: loader.py  models.py  user_settings.py
robofocus_alpaca/focuser/: controller.py
robofocus_alpaca/protocol/: __init__.py  checksum.py  encoder.py  interface.py  logger.py  port_scanner.py  robofocus_serial.py
robofocus_alpaca/simulator/: mock_serial.py  web_api.py
robofocus_alpaca/simulator/static/: index.html
robofocus_alpaca/static/: index.html  logs.html
robofocus_alpaca/utils/: exceptions.py  logging_setup.py
