[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["robofocus_alpaca"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robofocus_alpaca*"]
exclude = ["openspec*", "references*", "tests*"]

[project]
name = "robofocus-alpaca"
version = "1.0.0"
description = "ASCOM Alpaca driver for Robofocus electronic focuser"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Samuele Vecchi", email = "noreply@example.com"}
]
keywords = ["astronomy", "ascom", "alpaca", "robofocus", "focuser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyserial>=3.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.5.0",
    "httpx>=0.25.0",  # For FastAPI TestClient
]

[project.scripts]
robofocus-alpaca = "robofocus_alpaca.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/robofocus-alpaca"
Documentation = "https://github.com/yourusername/robofocus-alpaca#readme"
Repository = "https://github.com/yourusername/robofocus-alpaca"
Issues = "https://github.com/yourusername/robofocus-alpaca/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name (for short variable names)
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=robofocus_alpaca --cov-report=term-missing"
testpaths = [
    "robofocus_alpaca/tests",
]
pythonpath = [
    "."
]
